# carr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RUNME  TESTME
src/: CMakeLists.txt  Makefile  carr.c  carr.h  carr_arg.c  carr_arg.h  carr_cis.h  carr_esc.h  carr_readline.c  carr_readline.h  carr_readline_lua.c  carr_readline_lua.h  headers.h  lua.h  lua_hacked.c
test/: CMakeLists.txt  arrlen_test.c  carr_copy_test.c  carr_dup_test.c  carr_init_test.c  carr_new.c  carr_resize_if_needed_test.c  carr_resize_test.c  carr_test.c  carr_test.h  cstra_new.c  ctest.c  ctest.h  mem_is_zero_test.c  test.h  test1.c  test2.c
test/test_src/: carr_test.c  cstr_test.c  cstr_test.h  ctest.h  lued_test.c  lued_test.h
